# CSEE-Virtual-Triage

./: .gitignore  CONTRIBUTING.md  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yaml
apps/admin/: package.json  tsconfig.json
apps/admin/src/: App.tsx  layout.tsx  main.tsx  router.jsx  router.tsx  supabaseClient.jsx
apps/admin/src/components/: Dashboard.jsx  Dashboard.tsx  FAQboard.tsx  FAQboard2.tsx  PrivateRoute.jsx  PrivateRoute.tsx  Signin.jsx  Signin.tsx  Signup.jsx  Signup.tsx  faq.css
apps/admin/src/components/AppSidebar/: index.tsx
apps/admin/src/components/FAQAddButton/: index.tsx
apps/admin/src/components/FAQDialog/: index.tsx
apps/admin/src/components/FAQItem/: index.tsx
apps/admin/src/components/FAQList/: index.tsx
apps/admin/src/components/Header/: index.tsx
apps/admin/src/components/Main/: index.tsx
apps/admin/src/context/: AuthContext.jsx
apps/admin/src/hooks/: use-faqs.ts
apps/admin/src/views/FAQ/: index.tsx
apps/admin/src/views/Login/: index.tsx
apps/admin/src/views/ResolveTicket/: index.tsx
apps/admin/src/views/Root/: index.tsx
apps/web/: package.json  tsconfig.json
apps/web/src/: App.tsx  AppRoutes.tsx  Dashboard.tsx  Routes.jsx  main.tsx
apps/web/src/components/Chatbot/: index.tsx
apps/web/src/hooks/: use-faqs.ts
chat_backend/: ingestion.py  pyproject.toml  rag.py  rag_pipeline.py  readme.md  requirements.txt  urls_scraped.txt  vectorstore_init.py
chat_backend/api/: main.py
chat_backend/chatbot/: ingestion.py  rag.py  rag_pipeline.py
chat_backend/scrape/: scrapeNprocess.py
(+18 files in other folders)
